Revert "commit changes"
This reverts commit f95aa3ea4c6c3d6cf839423fcb28fc3c859e3ec9.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,18 +2,13 @@
 GameName=ProjetSessionProto
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levelmenu/Menustart.Menustart
-LocalMapOptions=
-TransitionMap=None
+EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-FourPlayerSplitscreenLayout=Grid
-bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levelmenu/Menustart.Menustart
-ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Levelmenu/startgamemode.startgamemode_C
+GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
